# nettigo-air-monitor

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  example.py  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  prek-auto-update.yml  publish.yml  test.yml
nettigo/: __init__.py  const.py
nettigo_air_monitor/: __init__.py  const.py  exceptions.py  model.py
scripts/: setup-local-env.sh
tests/: __init__.py  conftest.py  test_base.py  test_init.py
tests/fixtures/: invalid_data.json  sensor_community_data.json  valid_data.json
tests/snapshots/: test_init.ambr
