[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name        = "nettigo_air_monitor"
version     = "4.1.0"
license     = {text = "Apache-2.0"}
description = "Python wrapper for getting air quality data from Nettigo Air Monitor devices."
readme      = "README.md"
authors     = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies    = [
    "aiohttp>=3.9.4",
    "aqipy-atmotech",
    "dacite>=1.7.0",
    "tenacity"
]

[project.urls]
Homepage = "https://github.com/bieniu/nettigo-air-monitor"

[tool.setuptools.packages.find]
include = ["nettigo_air_monitor*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "ISC001",   # Single line implicit string concatenation
    "TRY003",   # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ASYNC230", # Async functions should not open files with blocking methods like `open`
    "PLR2004",  # Magic value used in comparison
    "PTH123",   # `open()` should be replaced by `Path.open()`
    "S101",     # Use of `assert` detected
    ]
"example.py" = [
    "S105",     # Possible hardcoded password: "password"
    "S106",     # Possible hardcoded password: "password"
    "T201",     # `print` found
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.coverage.run]
source = ["nettigo_air_monitor"]

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py312, py313, lint, typing, coverage
skip_missing_interpreters = True

[gh-actions]
python =
  3.12: py312, lint, typing, coverage
  3.13: py313

[testenv]
commands =
  pytest --timeout=30 --cov=nettigo_air_monitor --cov-report=xml {posargs} --error-for-skips
deps =
  -rrequirements.txt
  -rrequirements-test.txt

[testenv:lint]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  ruff check .
  ruff format --check .

[testenv:typing]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  mypy nettigo_air_monitor

[testenv:coverage]
basepython = python3
depends = py312
skip_install = True
usedevelop = False
commands =
  coverage report --fail-under=79
"""
