[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nettigo_air_monitor"
version = "0.0.0"
license = "Apache-2.0"
description = "Python wrapper for getting air quality data from Nettigo Air Monitor devices."
readme = "README.md"
authors = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies    = [
    "aiohttp>=3.9.4",
    "aqipy-atmotech",
    "dacite>=1.7.0",
    "tenacity"
]

[dependency-groups]
dev = [
  "aioresponses==0.7.8",
  "prek==0.3.0",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-error-for-skips==2.0.2",
  "pytest-timeout==2.4.0",
  "pytest==9.0.2",
  "ruff==0.14.13",
  "syrupy==5.0.0",
  "ty==0.0.13",
]

[project.urls]
Homepage = "https://github.com/bieniu/nettigo-air-monitor"

[tool.setuptools.packages.find]
include = ["nettigo_air_monitor*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "TRY003",   # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ASYNC230", # Async functions should not open files with blocking methods like `open`
    "PLR2004",  # Magic value used in comparison
    "PTH123",   # `open()` should be replaced by `Path.open()`
    "S101",     # Use of `assert` detected
    ]
"example.py" = [
    "S105",     # Possible hardcoded password: "password"
    "S106",     # Possible hardcoded password: "password"
    "T201",     # `print` found
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ty.environment]
python-version = "3.13"
